Revision history for File::DataClass

         - Optimised F::DC::Storage::WithLanguage::_get_key_and_newest
         - Added type coercion to LanguageType from Undef in
           F::DC::Schema::WithLanguage

0.10.380 2012-05-19
         - Added F::DC::Storage::Any
         - Fixed attribute merging in F::DC::Schema::BUILDARGS
         - Enhanced F::DC::IO close/rename logic
         - Enhanced leader selection in F::DC::Exception
         - Added F::DC::Storage::Any
         - F::DC::IO can coerce the filename from a coderef
         - POD updates

0.9.368  2012-04-17
         - Turned CPAN testing on
         - Stopped using lazy_build in favour of lazy and builder
         - Switched to using MX::Types
         - Exception_Class now a class attribute of F::DC::Constants
         - Updated inc::Bob to 1.3
         - API update F::DC::IO::rmtree now calls File::Path::remove_tree

0.8.360  2012-04-03
         - Stopped CPAN testing, no point in allowing it to continue

0.8.357  2012-04-03
         - Turned CPAN testing back on and exempted permission tests in io.t
           for MSWin32 and cygwin

0.8.355  2012-03-29
         - Turning CPAN testing off
         - Updated inc::Bob to 1.2

0.8.351  2012-03-29
         - Upped min Perl ver to 5.10
         - Updated inc::Bob. Added inc::CPANTesting

0.7.343  2012-03-23
         - In F::DC::IO::close unlock and close handle before rename
           on MSWin32 and Cygwin. Creates a race condition on those platforms

0.7.339  2012-03-22
         - Altered F::DC:IO::close to work around rename of open files

0.7.338  2012-03-21
         - Tried reordering some use statements
         - Use binary mode for some IO tests on evil platform

0.7.336  2012-03-20
         - Turned CPAN testing on. Trying to diagnose Module::Build / Moose
           bug which results in 'has' not being defined during testing

0.7.335  2012-03-12
         - Stopped using Data::Section. It doesn't work with Plack/Starman